@@ -8,7 +8,7 @@
 pscoast \- To plot land-masses, water-masses, coastlines, borders, and rivers
 .SH SYNOPSIS
 \fBpscoast\fP GMT_J_OPT GMT_Rgeo_OPT 
-[ OPT(A)\fImin_area\fP[\fI/min_level/max_level\fP] ] [ GMT_B_OPT ] [ OPT(C)\fIfill\fP ] [ OPT(D)\fIresolution\fP ] 
+[ OPT(A)\fImin_area\fP[\fI/min_level/max_level\fP] ] [ GMT_B_OPT ] [ OPT(C)\fIfill\fP ] [ OPT(D)\fIresolution\fP[\fB+\fP] ] 
 [ GMT_E_OPT ] [ OPT(G)\fIfill\fP|\fBc\fP ] 
 [ OPT(I)\fIriver\fP[/\fIpen\fP] ] [ GMT_Jz_OPT ] [ GMT_K_OPT ] 
 [ GMT_SCALE ] [ GMT_O_OPT ] [ GMT_Mo_OPT ] [ OPT(N)\fIborder\fP[/\fIpen\fP] ] [ GMT_O_OPT ] 
@@ -40,7 +40,8 @@ Set the shade, color, or pattern for lakes  [Default is the fill chosen for "wet
 .TP
 OPT(D)
 Selects the resolution of the data set to use ((\fBf\fP)ull, (\fBh\fP)igh, (\fBi\fP)ntermediate, (\fBl\fP)ow, and (\fBc\fP)rude).  The
-resolution drops off by 80% between data sets  [Default is \fBl\fP].
+resolution drops off by 80% between data sets  [Default is \fBl\fP].  Append \fP+\fP to automatically select a lower resolution should
+the one requested not be available [abort if not found].
 #include "explain_-E.txt"
 .TP
 OPT(G)
